# revenant

./: .dockerignore  .gitignore  Cargo.toml  LORE.md  README.md  netlify.toml  rust-toolchain.toml
.claude/: launch.json
.github/workflows/: build-release.yml  main-prerelease.yml  release.yml
assets/: make-logo.sh
crates/revenant/: Cargo.toml
crates/revenant-agent/: Cargo.toml
crates/revenant-agent/src/: agents.rs  lib.rs  personalities.rs
crates/revenant-ascension/: Cargo.toml
crates/revenant-ascension/src/: classify.rs  config.rs  lib.rs  materiality.rs  offer.rs  review.rs  run.rs
crates/revenant-channels/: Cargo.toml
crates/revenant-channels/src/: lib.rs  telegram.rs
crates/revenant-client/: Cargo.toml
crates/revenant-client/src/: lib.rs
crates/revenant-control/: Cargo.toml
crates/revenant-control/src/: lib.rs  mtls.rs
crates/revenant-core/: Cargo.toml
crates/revenant-core/src/: config.rs  event.rs  home.rs  lib.rs  loops.rs  privacy.rs  providers.rs  tool.rs
crates/revenant-evals/: Cargo.toml
crates/revenant-evals/src/: lib.rs
crates/revenant-evals/suites/: agents.toml  default.toml
crates/revenant-gateway/: Cargo.toml
crates/revenant-gateway/src/: analytics.rs  lib.rs  render.rs  supervisor.rs
crates/revenant-llm/: Cargo.toml
crates/revenant-llm/examples/: llm_probe.rs
crates/revenant-llm/src/: lib.rs
crates/revenant-loops/: Cargo.toml
crates/revenant-loops/src/: jobs.rs  lib.rs
crates/revenant-mcp/: Cargo.toml
crates/revenant-mcp/src/: lib.rs
crates/revenant-memory/: Cargo.toml
crates/revenant-memory/src/: consolidate.rs  embed.rs  graph.rs  index.rs  lib.rs  retrieve.rs  vault.rs  watch.rs
crates/revenant-memory/tests/: consolidate.rs  eval.rs
crates/revenant-net/: Cargo.toml
crates/revenant-net/examples/: a2a_sign.rs
crates/revenant-net/src/: a2a.rs  accounts.rs  artifact.rs  attest.rs  boost.rs  client.rs  damper.rs  handle.rs  horde.rs  identity.rs  ledger.rs  lib.rs  necropolis.rs  post.rs  profile.rs  proof.rs  quest.rs  register.rs  reply.rs  reputation.rs  scroll.rs  tls.rs  vote.rs
crates/revenant-plugin/: Cargo.toml
crates/revenant-plugin/src/: lib.rs
crates/revenant-security/: Cargo.toml
crates/revenant-security/src/: lib.rs
crates/revenant-skills/: Cargo.toml
crates/revenant-skills/src/: lib.rs
crates/revenant-store/: Cargo.toml
crates/revenant-store/src/: lib.rs
crates/revenant-tools/: Cargo.toml
crates/revenant-tools/examples/: a2a_call.rs
crates/revenant-tools/src/: builtins.rs  jail.rs  lib.rs
crates/revenant-tui/: Cargo.toml
crates/revenant-tui/src/: main.rs
crates/revenant-wasm/: Cargo.toml
crates/revenant-wasm/src/: lib.rs
crates/revenant/src/: ascend_loop.rs  autoupdate.rs  budget.rs  contribute.rs  daemon.rs  discuss.rs  heartbeat.rs  horde_worker.rs  introspect.rs  main.rs  repl.rs  reproduce.rs  service.rs
demos/horde/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  entrypoint.sh  host_smoke.sh  live_proof.sh  mock_llm.py  peer.config.toml  run.sh  suite.json
deploy/necropolis/: Dockerfile  fly.toml
docs/: DESIGN-MTLS.md  DESIGN.md  gateway-controlplane.md  network-promotion.md  vault.md
examples/wasm-reverse/: Cargo.toml
examples/wasm-reverse/src/: lib.rs
installer/: install.sh  package.sh
plugins/: README.md
plugins/revenant-plugin-example/: Cargo.toml
plugins/revenant-plugin-example/src/: lib.rs
scripts/: install-canary.sh  rollout.sh
site/: account.html  index.html  llms-full.txt  llms.txt  marketplace.html  robots.txt  sitemap.xml
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  api.js  styles.css
