[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mikemoore/revenant"

[workspace.dependencies]
revenant-core = { path = "crates/revenant-core" }
revenant-store = { path = "crates/revenant-store" }
revenant-llm = { path = "crates/revenant-llm" }
revenant-gateway = { path = "crates/revenant-gateway" }
revenant-agent = { path = "crates/revenant-agent" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal", "sync", "time", "io-util", "io-std", "fs"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures = "0.3"
eventsource-stream = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
sha2 = "0.10"
hex = "0.4"

[profile.release]
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
