[workspace]
resolver = "2"
members = ["crates/*", "plugins/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/themsquared/revenant"

[workspace.dependencies]
revenant-core = { path = "crates/revenant-core" }
revenant-store = { path = "crates/revenant-store" }
revenant-llm = { path = "crates/revenant-llm" }
revenant-gateway = { path = "crates/revenant-gateway" }
revenant-agent = { path = "crates/revenant-agent" }
revenant-security = { path = "crates/revenant-security" }
revenant-tools = { path = "crates/revenant-tools" }
revenant-skills = { path = "crates/revenant-skills" }
revenant-control = { path = "crates/revenant-control" }
revenant-client = { path = "crates/revenant-client" }
revenant-memory = { path = "crates/revenant-memory" }
revenant-channels = { path = "crates/revenant-channels" }
revenant-mcp = { path = "crates/revenant-mcp" }
revenant-plugin = { path = "crates/revenant-plugin" }
revenant-plugin-example = { path = "plugins/revenant-plugin-example" }
revenant-loops = { path = "crates/revenant-loops" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal", "sync", "time", "io-util", "io-std", "fs"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures = "0.3"
eventsource-stream = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
model2vec-rs = "0.2"
simsimd = "6"
petgraph = { version = "0.6", default-features = false, features = ["graphmap"] }
notify = "6"
notify-debouncer-full = "0.3"
strsim = "0.11"
rust-embed = "8"
croner = "2"
chrono = "0.4"
inventory = "0.3"
mime_guess = "2"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

[profile.release]
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
