[package]
name = "revenant-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
revenant-core = { workspace = true }
revenant-store = { workspace = true }
revenant-llm = { workspace = true }
revenant-tools = { workspace = true }
revenant-skills = { workspace = true }
revenant-security = { workspace = true }
revenant-memory = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
