[package]
name = "revenant-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
revenant-core = { workspace = true }
revenant-store = { workspace = true }
revenant-llm = { workspace = true }
revenant-tools = { workspace = true }
revenant-skills = { workspace = true }
revenant-security = { workspace = true }
revenant-memory = { workspace = true }
revenant-mcp = { workspace = true }
tokio = { workspace = true }
inventory = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
