[package]
name = "revenant-ascension"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
revenant-core.workspace = true
revenant-evals.workspace = true
revenant-client.workspace = true
futures.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
