[package]
name = "revenant-channels"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
revenant-core = { workspace = true }
revenant-store = { workspace = true }
revenant-agent = { workspace = true }
revenant-security = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
