[package]
name = "revenant-control"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
revenant-core = { workspace = true }
revenant-store = { workspace = true }
revenant-agent = { workspace = true }
revenant-security = { workspace = true }
revenant-skills = { workspace = true }
revenant-llm = { workspace = true }
revenant-gateway = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
revenant-memory = { workspace = true }
