[package]
name = "revenant-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
croner = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
