[package]
name = "revenant-evals"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
revenant-core.workspace = true
revenant-client.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
regex = "1"
