[package]
name = "revenant-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
revenant-core = { workspace = true }
revenant-store = { workspace = true }
revenant-llm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
model2vec-rs = { workspace = true }
simsimd = { workspace = true }
petgraph = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
strsim = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
dirs = { workspace = true }
