[package]
name = "revenant-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
revenant-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand.workspace = true
sha2.workspace = true
hex.workspace = true
base64 = "0.22"
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
