[package]
name = "revenant-security"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
revenant-core = { workspace = true }
revenant-store = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
