[package]
name = "revenant-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
revenant-core = { workspace = true }
revenant-store = { workspace = true }
revenant-skills = { workspace = true }
revenant-memory = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
