[package]
name = "revenant-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
revenant-core.workspace = true
revenant-tools.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmi = "0.36"

[dev-dependencies]
wat = "1"
