[package]
name = "revenant"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "revenant"
path = "src/main.rs"

[dependencies]
revenant-core = { workspace = true }
revenant-store = { workspace = true }
revenant-llm = { workspace = true }
revenant-gateway = { workspace = true }
revenant-agent = { workspace = true }
revenant-security = { workspace = true }
revenant-skills = { workspace = true }
revenant-tools = { workspace = true }
revenant-control = { workspace = true }
revenant-client = { workspace = true }
revenant-memory = { workspace = true }
revenant-channels = { workspace = true }
revenant-loops = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
